# open_api_client

./: README.md  pyproject.toml
openai_api_client/: client.py  main.py
scripts/: run_openai.py
tests/: test_client.py
